refactor : logback 삭제 및 Exception Handler 수정